--- a/RhetosCore/Source/Rhetos.Deployment/Rhetos.Deployment.csproj
+++ b/RhetosCore/Source/Rhetos.Deployment/Rhetos.Deployment.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RuntimeFrameworkVersion>2.0.0-preview1-001875-00</RuntimeFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.5.0" />
+    <PackageReference Include="DotNetZip" Version="1.10.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="NuGet.Client" Version="4.0.0" />
+    <PackageReference Include="NuGet.Core" Version="2.14.0" />
   </ItemGroup>
 
   <ItemGroup>
