--- a/RhetosCore/CommonConcepts/Plugins/Rhetos.Dom.DefaultConcepts/Rhetos.Dom.DefaultConcepts.csproj
+++ b/RhetosCore/CommonConcepts/Plugins/Rhetos.Dom.DefaultConcepts/Rhetos.Dom.DefaultConcepts.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.0.0-preview1-final" />
     <PackageReference Include="System.Composition" Version="1.1.0-preview1-25305-02" />
   </ItemGroup>
 
