--- a/RhetosCore/Source/Rhetos.Extensibility/Rhetos.Extensibility.csproj
+++ b/RhetosCore/Source/Rhetos.Extensibility/Rhetos.Extensibility.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.5.0" />
+    <PackageReference Include="System.Composition" Version="1.1.0-preview1-25305-02" />
   </ItemGroup>
 
   <ItemGroup>
