--- a/RhetosCore/CommonConcepts/Plugins/Rhetos.Dom.DefaultConcepts/Rhetos.Dom.DefaultConcepts.csproj
+++ b/RhetosCore/CommonConcepts/Plugins/Rhetos.Dom.DefaultConcepts/Rhetos.Dom.DefaultConcepts.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.0.0-preview1-final" />
-    <PackageReference Include="System.Composition" Version="1.1.0-preview1-25305-02" />
+    <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.0.0" />
+    <PackageReference Include="System.Composition" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
