--- a/RhetosCore/CommonConcepts/Plugins/Rhetos.Dom.DefaultConcepts/Rhetos.Dom.DefaultConcepts.csproj
+++ b/RhetosCore/CommonConcepts/Plugins/Rhetos.Dom.DefaultConcepts/Rhetos.Dom.DefaultConcepts.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.0.0" />
     <PackageReference Include="System.Composition" Version="1.1.0" />
   </ItemGroup>
