--- a/RhetosCore/Source/Rhetos.Deployment/Rhetos.Deployment.csproj
+++ b/RhetosCore/Source/Rhetos.Deployment/Rhetos.Deployment.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.5.0" />
-    <PackageReference Include="DotNetZip" Version="1.10.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
-    <PackageReference Include="NuGet.Client" Version="4.0.0" />
-    <PackageReference Include="NuGet.Core" Version="2.14.0" />
+    <PackageReference Include="NuGet.Client" Version="4.2.0" />
+    <PackageReference Include="NuGet.PackageManagement.NetStandard" Version="4.3.0" />
+    <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
