- add resource files to deployment

--- a/RhetosCore/CommonConcepts/Plugins/Rhetos.DatabaseGenerator.DefaultConcepts/Rhetos.DatabaseGenerator.DefaultConcepts.csproj
+++ b/RhetosCore/CommonConcepts/Plugins/Rhetos.DatabaseGenerator.DefaultConcepts/Rhetos.DatabaseGenerator.DefaultConcepts.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Composition" Version="1.1.0-preview1-25305-02" />
+    <PackageReference Include="System.Composition" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
