--- a/RhetosCore/Source/Rhetos.Deployment/Rhetos.Deployment.csproj
+++ b/RhetosCore/Source/Rhetos.Deployment/Rhetos.Deployment.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.5.0" />
+    <PackageReference Include="Autofac" Version="4.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="NuGet.Client" Version="4.2.0" />
     <PackageReference Include="NuGet.PackageManagement.NetStandard" Version="4.3.0" />
@@ -22,5 +22,7 @@
     <ProjectReference Include="..\Rhetos.Logging\Rhetos.Logging.csproj" />
     <ProjectReference Include="..\Rhetos.Utilities\Rhetos.Utilities.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <EmbeddedResource Include="RhetosDatabase.MsSql.sql"></EmbeddedResource>
+  </ItemGroup>
 </Project>
