--- a/RhetosCore/Source/Rhetos.Extensibility/Rhetos.Extensibility.csproj
+++ b/RhetosCore/Source/Rhetos.Extensibility/Rhetos.Extensibility.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.5.0" />
-    <PackageReference Include="System.Composition" Version="1.1.0-preview1-25305-02" />
+    <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="System.Composition" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
