--- a/RhetosCore/Source/Rhetos.Compiler.Interfaces/Rhetos.Compiler.Interfaces.csproj
+++ b/RhetosCore/Source/Rhetos.Compiler.Interfaces/Rhetos.Compiler.Interfaces.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.CodeDom" Version="4.4.0-preview1-25305-02" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
