--- a/RhetosCore/Source/Rhetos.Compiler/Rhetos.Compiler.csproj
+++ b/RhetosCore/Source/Rhetos.Compiler/Rhetos.Compiler.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Compilers" Version="2.1.0" />
-    <PackageReference Include="System.CodeDom" Version="4.4.0-preview1-25305-02" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
