--- a/RhetosCore/Source/DeployPackages/RhetosPackages.config
+++ b/RhetosCore/Source/DeployPackages/RhetosPackages.config
@@ -32,4 +32,5 @@
     <package id="CommonConcepts" version="0.9.12" source="..\OldPackages" />
   -->
     <package id="Rhetos.CommonConcepts" source="..\..\CommonConcepts" />
+	<package id="Rhetos.RestGenerator" source="..\..\RestGenerator" />
 </packages>
