--- a/RhetosCore/Source/DeployPackages/appsettings.json
+++ b/RhetosCore/Source/DeployPackages/appsettings.json
@@ -5,10 +5,10 @@
       "Default": "Warning"
     }
   },
-  
+
   "ServerConnectionString": {
-    "Value": "Data Source=(local);Initial Catalog=TestCore;Integrated Security=SSPI;",
-	  "Provider": "Rhetos.MsSql"
+    "Value": "Data Source=(local);Initial Catalog=TestRhetos;Integrated Security=SSPI;",
+    "Provider": "Rhetos.MsSql"
   },
   
   "AppSettings": {
