- add nlog.config. - refactoring code.

--- a/RhetosCore/Source/Rhetos/Rhetos.csproj
+++ b/RhetosCore/Source/Rhetos/Rhetos.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\Rhetos.Utilities\Rhetos.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
