--- a/RhetosCore/Source/Rhetos/appsettings.json
+++ b/RhetosCore/Source/Rhetos/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ServerConnectionString": {
-    "Value": "Data Source=(local);Initial Catalog=TestRhetos;Integrated Security=SSPI;",
+    "Value": "Data Source=(local);Initial Catalog=TestCore;Integrated Security=SSPI;",
     "Provider": "Rhetos.MsSql"
   },
   
