--- a/RhetosCore/Source/CreateAndSetDatabase/CreateAndSetDatabase.csproj
+++ b/RhetosCore/Source/CreateAndSetDatabase/CreateAndSetDatabase.csproj
@@ -9,5 +9,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <None Update="appsettings_template.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
