--- a/RhetosCore/Source/CreateAndSetDatabase/appsettings_template.json
+++ b/RhetosCore/Source/CreateAndSetDatabase/appsettings_template.json
@@ -18,5 +18,24 @@
     "Security.LookupClientHostname": "false",
     "AuthorizationAddUnregisteredPrincipals": "false",
     "BuiltinAdminOverride": "true"
+  },
+
+  "RhetosAspNetFormsAuth": {
+    "RunAdminAccountMigration": true,
+    "AdminPassword": "test.123",
+
+    "MaxFailedAccessAttempts": 1000,
+    
+    //Username & email configuration
+    "RequiredUniqueChars": 1,
+    "RequireConfirmedEmail": false,
+
+    // Password configuration
+    "RequireUniqueEmail": false,
+    "RequireUppercase": false,
+    "RequireNonAlphanumeric": false,
+    "RequireLowercase": false,
+    "RequiredLength": 4,
+    "RequireDigit": false
   }
 }
