--- a/RhetosCore/Source/Rhetos/RhetosPackages.config
+++ b/RhetosCore/Source/Rhetos/RhetosPackages.config
@@ -31,6 +31,7 @@
     Examples:
     <package id="CommonConcepts" version="0.9.12" source="..\OldPackages" />
   -->
-    <package id="Rhetos.CommonConcepts" source="..\..\CommonConcepts" />
-	<package id="Rhetos.RestGenerator" source="..\..\RestGenerator" />
+    <package id="Rhetos.CommonConcepts" source="..\..\..\..\..\..\CommonConcepts" />
+	<package id="Rhetos.RestGenerator" source="..\..\..\..\..\..\RestGenerator" />
+	<package id="Rhetos.AspNetFormsAuth" source="..\..\..\..\..\..\AspNetFormsAuth" />
 </packages>
