--- a/RhetosCore/Source/Rhetos/nlog.config
+++ b/RhetosCore/Source/Rhetos/nlog.config
@@ -10,6 +10,7 @@
 
   <rules>
     <logger name="DeployPackages" level="Trace" writeTo="console" />
+    <logger name="DeployPackages" level="Error" writeTo="console" />
     <logger name="*" level="Info" writeTo="console" />
     <logger name="*" level="Error" writeTo="error-log-file" />
     <logger name="*" level="Warn" writeTo="warning-log-file" />
